# rust-thesaurus

./: Cargo.toml  README.md
scripts/: convert_en.py
src/: db.rs  error.rs  lib.rs  parser.rs  provision.rs  state.rs  tests.rs
